--- a/src/snippets/components/reply-p/_reply-p.scss
+++ b/src/snippets/components/reply-p/_reply-p.scss
@@ -83,6 +83,7 @@
 
 .reply-p__tarea {
   padding-top: 22px;
+  text-align:  left;
   .form-control {
     @extend %font--alpha;
     padding-top:    9px;
